# claude-status-light

./: .gitignore  2026-06-07-claude-status-light-design.md  2026-06-07-claude-status-light-implementation-plan.md  2026-06-08-portable-hook-self-healing-implementation-plan.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: macos-verify.yml
bridge/: README.md  append-debug-log.mjs  classify-event.mjs  claude-hook.mjs  package.json  read-current-state.mjs  runtime-paths.mjs  write-state.mjs
bridge/__tests__/: classify-event.test.mjs  claude-hook.test.mjs  runtime-paths.test.mjs  session-binding.test.mjs  write-state.test.mjs
public/sounds/: SOURCES.md
src/: App.tsx  styles.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_settings.rs  lib.rs  main.rs  profiles.rs  runtime_paths.rs
src/components/: StatusLabel.tsx  StatusLight.tsx  UsagePanel.tsx
src/components/__tests__/: StatusLight.test.tsx
src/hooks/: index.ts  useClaudeUsage.ts  useSoundToggle.ts  useStatusState.ts  useViewportScale.ts
src/hooks/__tests__/: useStatusState.test.tsx
src/lib/: claude-setup.ts  default-state.ts  design.ts  read-state.ts  scale.ts  sound.ts  types.ts  usage.ts
src/lib/__tests__/: claude-setup.test.ts  default-state.test.ts  design.test.ts  read-state.test.ts  scale.test.ts  sound.test.ts  usage.test.ts
